# pink-transcriber-mps

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md
